# limehd

./: README.md  docker-compose.yml
backend/: Dockerfile  README.md  db.py  dependencies.py  lhohj  pyproject.toml  requirements.txt
backend/limehd/: __init__.py  auth.py  config.py  db.py  dependencies.py  main.py  test.py
backend/limehd/crud/: __init__.py  category.py  channel.py  genre.py  program.py  stream.py  token.py  users.py
backend/limehd/error/: user.py
backend/limehd/models/: __init__.py  channel.py  channel_user.py  program.py  program_channel.py  program_user.py  stream.py  tokens.py  user.py
backend/limehd/models/association_tables/: channel_user.py
backend/limehd/routers/: __init__.py  category.py  channel.py  genre.py  program.py  user.py
backend/limehd/schemas/: __init__.py  channel.py  program.py  stream.py  user.py
backend/limehd/serializers/: channel.py  program.py  stream.py  token.py  user.py
backend/limehd/utils/: user_id.py
backend/scripts/: 1.txt  2.txt  __init__.py  a.py  b.py  channels_db.csv  db_add_genres.py  fill_db.py  fill_db_channels.py  fill_db_programs.py  fill_db_streams.py  genres.txt  gpt.py  norm-res-2.txt  norm-res.txt  norm_res_2.py  ot.txt  pars.py  res.txt  res2.txt  test.py
frontend/: .env.development  .env.production  package.json  pnpm-lock.yaml  vite.config.ts.timestamp-1702761270024-568d03063fbd7.mjs
frontend/src/: index.scss  main.tsx
messages/: Dockerfile  mailing.py  schedule.py
messages/models/: base.py  channel.py  channel_user.py  program.py  program_user.py  stream.py  user.py
(+30 files in other folders)
